tree layout bug fix

--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -99,3 +99,20 @@
 }
 
 
+.attr-tree-l{
+	border: 1px solid #d9d9d9;
+	float: left;
+	width: 19%;
+	margin-right: 1%;
+}
+
+.search-field-r{
+	float: right;
+	width: 80%;
+}
+
+.clr{
+	clear: both;
+}
+
+
